# Optimization-Problem

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: ARCHITECTURE_JA.md
examples/: gd1d.c  gd2d.c  gd_quadratic.c  gd_sincos.c  plot_single.gp  run_cubic.sh  run_quad2d.sh
include/gd/: callbacks.h  loss.h  model.h  optim.h  trainer.h  types.h
scripts/: plot_gd1d.sh  plot_gd2d.sh  run_gradient_descent.sh  run_simplex.sh
src/: callbacks.c  loss.c  model.c  optim.c  trainer.c  utils.c  utils.h
topics/gradient_descent/: CMakeLists.txt
topics/gradient_descent/examples/: gd1d.c  gd1d.cpp  gd2d.c  gd2d.cpp  plot_single.gp  run_cubic.sh  run_quad2d.sh
topics/gradient_descent/include/gd/: callbacks.h  gradient_descent.hpp  loss.h  model.h  optim.h  trainer.h  types.h
topics/gradient_descent/src/: callbacks.c  gradient_descent.cpp  loss.c  model.c  optim.c  trainer.c  utils.c  utils.h
topics/simplex/: CMakeLists.txt
topics/simplex/examples/: sample.lp
topics/simplex/include/simplex/: simplex.h  simplex.hpp
topics/simplex/src/: simplex.c  simplex.cpp  simplex_cli.c  simplex_cli.cpp
